android: Rename to OpenGLES

--- a/src/android/app/src/main/res/values/arrays.xml
+++ b/src/android/app/src/main/res/values/arrays.xml
@@ -173,7 +173,7 @@
     </integer-array>
 
     <string-array name="graphicsApiNames">
-        <item>OpenGL</item>
+        <item>OpenGLES</item>
     </string-array>
 
     <integer-array name="graphicsApiValues">
